--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>be.maximvdw</groupId>
     <artifactId>QAPlugin-module-urbandictionary</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <repositories>
         <repository>
             <id>mvdw-software</id>
@@ -19,7 +19,13 @@
             <url>http://repo.mvdw-software.be/content/groups/public/</url>
         </repository>
     </repositories>
-
+    <pluginRepositories>
+        <pluginRepository>
+            <id>public</id>
+            <name>Public Repositories</name>
+            <url>http://repo.mvdw-software.be/content/groups/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
@@ -35,12 +41,31 @@
         <dependency>
             <groupId>be.maximvdw</groupId>
             <artifactId>QAPlugin</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.9.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
     <build>
         <finalName>QAPlugin-module-urbandictionary</finalName>
+        <plugins>
+            <plugin>
+                <groupId>be.maximvdw</groupId>
+                <artifactId>ModuleUploader</artifactId>
+                <version>1.5.3</version>
+                <configuration>
+                    <accessToken>file:D:\Software\wildfly-9.0.2.Final\accesstoken.txt</accessToken>
+                    <projectName>QAPlugin</projectName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
