--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parrent>
+        <groupId>be.maximvdw</groupId>
+        <artifactId>QAPlugin</artifactId>
+        <relativePath>../../pom.xml</relativePath>
+    </parrent>
 
     <groupId>be.maximvdw</groupId>
     <artifactId>QAPlugin-module-urbandictionary</artifactId>
     <version>1.3.0-SNAPSHOT</version>
-    <repositories>
-        <repository>
-            <id>mvdw-software</id>
-            <name>Private Projects</name>
-            <url>http://repo.mvdw-software.be/content/groups/private-group/</url>
-        </repository>
-        <repository>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://repo.mvdw-software.be/content/groups/public/</url>
-        </repository>
-    </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>public</id>
@@ -31,12 +25,6 @@
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.9-pre1-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>be.maximvdw</groupId>
